# taihe_js_example

./: build-profile.json5  oh-package.json5
AppScope/: app.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/integer/include/: integer.op.h  integer.op.napi.h
entry/src/main/cpp/integer/src/: integer.op.impl.cpp  integer.op.napi.cpp
entry/src/main/cpp/large_rgb/include/: rgb.base.h  rgb.base.napi.h
entry/src/main/cpp/large_rgb/src/: rgb.base.impl.cpp  rgb.base.napi.cpp
entry/src/main/cpp/small_rgb/include/: rgb.base.h  rgb.base.napi.h
entry/src/main/cpp/small_rgb/src/: rgb.base.impl.cpp  rgb.base.napi.cpp
entry/src/main/cpp/string/include/: string.op.h  string.op.napi.h
entry/src/main/cpp/string/src/: string.op.impl.cpp  string.op.napi.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/pages/: Index.ets
